<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/imagem_brasil"
            android:src="@drawable/brasil" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_estado"/>

        <EditText
            android:id="@+id/editTextEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/digite_o_estado_aqui"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_valor_da_mercadoria"/>

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/digite_o_valor_aqui"
            android:inputType="numberDecimal"
            tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e5efff"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porcentagem_do_icms"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewPorcentagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valor_total_da_mercadoria"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_0_00"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calcular">
    </Button>

    </LinearLayout>

</ScrollView>
